...
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:id="@+id/organizer_create_event_activity"
    tools:context=".activities.OrganizerActivity">

...
        android:background="?attr/action_bar_organizer"
        android:theme="@style/Theme.ActionBar"
        app:title="Create/Edit Event"
        app:titleCentered="true"
        app:layout_constraintTop_toTopOf="parent"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Event Name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="Event Location"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="383dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_location_cords_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_location_cords_text"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"/>
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_description_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/date_time_container"
                android:orientation="vertical">

...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/start_time_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/start_time_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/end_time_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/end_time_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                <!-- Maximum Number of Attendees -->
                <LinearLayout
                    android:id="@+id/max_attendees_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/max_attendees_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/max_attendees_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                <!-- Geolocation Tracking Toggle -->
                <LinearLayout
                    android:id="@+id/geo_tracking_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/geo_tracking_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/upload_poster_button"
                    style="@style/CustomOutlinedButton"
                    android:layout_width="0dp"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/generate_qr_code_button"
                    style="@style/CustomOutlinedButton"
                    android:layout_width="0dp"
...

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
