...
        android:layout_height="wrap_content">
        <include layout="@layout/actionbar_editprofile">
        </include>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_view"
        android:layout_width="150dp"
        app:cardCornerRadius="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/profile_back_actionbar">
        <ImageView
            android:id="@+id/profile_image"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/test_profile"
            android:focusable="true">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/profile_view"
        android:layout_marginTop="20dp"
        android:clickable="false">
        <TextView
            android:id="@+id/first_name_text_view"
            style="@style/ProfileText"
            android:textStyle="bold"
            android:text="First Name:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/first_name_edit_text"
            style="@style/ProfileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/first_name_layout"
        android:layout_marginTop="20dp"
        android:clickable="false">
        <TextView
            android:id="@+id/last_name_text_view"
            style="@style/ProfileText"
            android:textStyle="bold"
            android:text="Last Name:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/last_name_edit_text"
            style="@style/ProfileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/last_name_layout"
        android:layout_marginTop="20dp"
        android:clickable="false">
        <TextView
            android:id="@+id/email_text_view"
            style="@style/ProfileText"
            android:textStyle="bold"
            android:text="E-Mail:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/email_edit_text"
            style="@style/ProfileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancel_save_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">
...
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            >
        </Button>
        <Button
            android:id="@+id/profile_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            >
        </Button>
        <Button
            android:id="@+id/profile_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginStart="3dp">
...
